@@ -5,6 +5,8 @@ xxx
     * Improvements:
         - muc::user::Item: Added with_ helpers
         - Correct cargo doc warnings
+        - Presence now has constructors for each variant so you don't have to import presence::Type, where Presence::available represents type None (#79)
+        - Presence::with_payload builds a payload into the presence (#79)
     * Breaking changes:
         - Removed the 'serde' feature. Add it directly by using 'jid'.
         `jid = { version = "*", features = ["serde"] }`.
